--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.10.3",
     "morgan": "^1.6.1",
     "node-sass": "^3.2.0",
+    "node-sass-middleware": "0.9.0",
     "nodemon": "^1.3.7",
     "path": "^0.11.14",
     "request": "^2.58.0",
